--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} */
 
-.logo {
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -25,18 +25,39 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
+} */
 
-.card {
+/* .card {
   padding: 2em;
+} */
+
+/* .read-the-docs {
+  color: #888;
+} */
+
+.menu-container {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+ transform: translateX(37.5px);
+  flex-direction: column;
 }
 
-.read-the-docs {
-  color: #888;
+.menu-button {
+  border-radius: 90px;
+}
+
+.menu.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.menu {
+  opacity:0;
 }
