--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,4 +1,13 @@
-.home {
-  color: blueviolet;
-  text-align: center;
+.prod-list {
+  display: flex;
+  width: 100%;
+  max-width: 1250px;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+.home-pg {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
