feat: carrossel na home && fix: navbar recarregando

--- a/src/components/NavBarBs/style.css
+++ b/src/components/NavBarBs/style.css
@@ -19,6 +19,7 @@
 }
 
 .nav-ctn .nav-items > * {
+  text-decoration: none;
   color: var(--primary-black) !important;
   border-radius: 5px;
   border: 1px solid transparent;
