fix: navbar hamburguer

--- a/src/components/NavBarBs/style.css
+++ b/src/components/NavBarBs/style.css
@@ -20,6 +20,7 @@
 
 .nav-ctn .nav-items > * {
   text-decoration: none;
+  display: flex;
   color: var(--primary-black) !important;
   border-radius: 5px;
   border: 1px solid transparent;
@@ -28,8 +29,7 @@
   padding: 5px 15px;
   background-color: var(--primary-white);
 }
-
-.nav-ctn .nav-items > *:hover {
+.me .nav-ctn .nav-items > *:hover {
   border: 1px solid var(--primary-black);
 }
 
