--- a/src/pages/Cadastro/style.css
+++ b/src/pages/Cadastro/style.css
@@ -1,11 +1,11 @@
 @import "../../styles/global.css";
 
-.lgn-ctn {
+.cadastro-ctn {
   display: flex;
   flex-direction: column;
 }
 
-.lgn-ctn .lgn-section {
+.cadastro-ctn .cadastro-section {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,20 +13,22 @@
 
 /* IMAGEM */
 
-.lgn-ctn .img-ctn {
+.cadastro-ctn .img-ctn {
   width: 350px;
   height: 430px;
   overflow: hidden;
 }
 
-.lgn-ctn .img-ctn img {
+.cadastro-ctn .img-ctn img {
   object-fit: contain;
   width: 100%;
 }
 
 /* FORM */
 
-.lgn-ctn .formulario {
+.cadastro-ctn .formulario {
+  transition: 0.2s;
+  color: var(--primary-black);
   width: 311px;
   display: flex;
   flex-direction: column;
@@ -35,16 +37,17 @@
 }
 
 /* FORM-TITLE */
-.lgn-ctn .formulario .title {
+.cadastro-ctn .formulario .title {
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 94px;
   margin: 32px 0;
+  margin-left: 11px;
 }
 
-.lgn-ctn .formulario .title h2 {
+.cadastro-ctn .formulario .title h2 {
   font-family: Poppins;
   font-size: 40px;
   font-weight: 500;
@@ -52,35 +55,45 @@
   letter-spacing: -0.4px;
 }
 
-.lgn-ctn .formulario .title p {
+.cadastro-ctn .formulario .title p {
   font-family: Inter;
-  color: var(--neutral-1);
+  color: var(--neutral-4);
+  transition: 0.2s;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: 26px;
 }
 
-.lgn-ctn .formulario .title p span {
+.cadastro-ctn .formulario .title p span {
   color: var(--color-green);
+  cursor: pointer;
+  transition: 0.25s;
+}
+
+.cadastro-ctn .formulario .title p span:hover {
+  color: var(--color-orange);
 }
 
 /* INPUTS */
-.lgn-ctn .formulario .inputs {
+.cadastro-ctn .formulario .inputs {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
 
-.lgn-ctn .formulario .inputs .entrada {
+.cadastro-ctn .formulario .inputs .entrada {
   display: flex;
   flex-direction: column;
   width: 100%;
   align-items: flex-start;
 }
 
-.lgn-ctn .formulario .inputs .entrada input {
+.cadastro-ctn .formulario .inputs .entrada input {
+  transition: 0.2s;
+  color: var(--primary-black);
   margin: 15px 0;
+  padding: 5px;
   width: 100%;
   height: 40px;
   margin: 0;
@@ -91,7 +104,11 @@
 }
 
 /* BOTAO */
-.lgn-ctn .botao {
+.cadastro-ctn .botao {
+  color: var(--primary-white);
+  transition: 0.2s;
+  font-weight: 500;
+  letter-spacing: 1px;
   display: flex;
   width: 311px;
   height: 48px;
@@ -100,20 +117,24 @@
   align-items: center;
   gap: 8px;
   border-radius: 8px;
-  background: var(--neutral-4);
+  background-color: var(--neutral-4);
+}
+
+.cadastro-ctn .botao:hover {
+  box-shadow: var(--shadow-color);
 }
 
 @media (min-width: 992px) {
-  .lgn-ctn {
+  .cadastro-ctn {
     height: 100vh;
   }
 
-  .lgn-ctn .lgn-section {
+  .cadastro-ctn .cadastro-section {
     flex-direction: row;
     justify-content: space-around;
   }
 
-  .lgn-ctn .img-ctn {
+  .cadastro-ctn .img-ctn {
     width: 430px;
     height: 500px;
   }
