--- a/src/pages/CadastroProduto/style.css
+++ b/src/pages/CadastroProduto/style.css
@@ -1,11 +1,11 @@
 @import "../../styles/global.css";
 
-.lgn-ctn {
+.cad-prod-ctn {
   display: flex;
   flex-direction: column;
 }
 
-.lgn-ctn .lgn-section {
+.cad-prod-ctn .cad-prod-section {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,20 +13,20 @@
 
 /* IMAGEM */
 
-.lgn-ctn .img-ctn {
+.cad-prod-ctn .img-ctn {
   width: 350px;
   height: 430px;
   overflow: hidden;
 }
 
-.lgn-ctn .img-ctn img {
+.cad-prod-ctn .img-ctn img {
   object-fit: contain;
   width: 100%;
 }
 
 /* FORM */
 
-.lgn-ctn .formulario {
+.cad-prod-ctn .formulario {
   width: 311px;
   display: flex;
   flex-direction: column;
@@ -35,7 +35,7 @@
 }
 
 /* FORM-TITLE */
-.lgn-ctn .formulario .title {
+.cad-prod-ctn .formulario .title {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -44,7 +44,7 @@
   margin: 32px 0;
 }
 
-.lgn-ctn .formulario .title h2 {
+.cad-prod-ctn .formulario .title h2 {
   font-family: Poppins;
   font-size: 40px;
   font-weight: 500;
@@ -52,7 +52,7 @@
   letter-spacing: -0.4px;
 }
 
-.lgn-ctn .formulario .title p {
+.cad-prod-ctn .formulario .title p {
   font-family: Inter;
   color: var(--neutral-1);
   font-size: 16px;
@@ -61,25 +61,25 @@
   line-height: 26px;
 }
 
-.lgn-ctn .formulario .title p span {
+.cad-prod-ctn .formulario .title p span {
   color: var(--color-green);
 }
 
 /* INPUTS */
-.lgn-ctn .formulario .inputs {
+.cad-prod-ctn .formulario .inputs {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
 
-.lgn-ctn .formulario .inputs .entrada {
+.cad-prod-ctn .formulario .inputs .entrada {
   display: flex;
   flex-direction: column;
   width: 100%;
   align-items: flex-start;
 }
 
-.lgn-ctn .formulario .inputs .entrada input {
+.cad-prod-ctn .formulario .inputs .entrada input {
   margin: 15px 0;
   width: 100%;
   height: 40px;
@@ -91,7 +91,7 @@
 }
 
 /* BOTAO */
-.lgn-ctn .botao {
+.cad-prod-ctn .botao {
   display: flex;
   width: 311px;
   height: 48px;
@@ -104,16 +104,16 @@
 }
 
 @media (min-width: 992px) {
-  .lgn-ctn {
+  .cad-prod-ctn {
     height: 100vh;
   }
 
-  .lgn-ctn .lgn-section {
+  .cad-prod-ctn .cad-prod-section {
     flex-direction: row;
     justify-content: space-around;
   }
 
-  .lgn-ctn .img-ctn {
+  .cad-prod-ctn .img-ctn {
     width: 430px;
     height: 500px;
   }
