--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -27,6 +27,8 @@
 /* FORM */
 
 .lgn-ctn .formulario {
+  transition: 0.2s;
+  color: var(--primary-black);
   width: 311px;
   display: flex;
   flex-direction: column;
@@ -42,6 +44,7 @@
   justify-content: space-between;
   height: 94px;
   margin: 32px 0;
+  margin-left: 11px;
 }
 
 .lgn-ctn .formulario .title h2 {
@@ -54,7 +57,8 @@
 
 .lgn-ctn .formulario .title p {
   font-family: Inter;
-  color: var(--neutral-1);
+  color: var(--neutral-4);
+  transition: 0.2s;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -86,6 +90,7 @@
 }
 
 .lgn-ctn .formulario .inputs .entrada input {
+  transition: 0.2s;
   color: var(--primary-black);
   margin: 15px 0;
   padding: 5px;
@@ -100,6 +105,10 @@
 
 /* BOTAO */
 .lgn-ctn .botao {
+  color: var(--primary-white);
+  transition: 0.2s;
+  font-weight: 500;
+  letter-spacing: 1px;
   display: flex;
   width: 311px;
   height: 48px;
