--- a/src/components/Darkmode/style.css
+++ b/src/components/Darkmode/style.css
@@ -7,23 +7,23 @@
   height: 33px;
   cursor: pointer;
   border-radius: 45px;
-  background-color: #ddd;
+  background-color: #413a3a;
   transition: background-color 0.3s, box-shadow 0.3s;
 }
 
 .darkmode .toggle-button {
-  background-color: #333;
+  background-color: #ffffff;
 }
 
 .sun-mode {
   position: absolute;
   z-index: 1;
-  top: 7px;
-  left: 5px;
-  width: 18px;
-  height: 18px;
+  top: 4px;
+  left: 7px;
+  width: 20px;
+  height: 20px;
   border-radius: 18px;
-  background: #fff;
+  background: #ffea00;
   transform: translateY(30px) rotate(10deg) scale(1);
   transition: transform 0.5s;
 }
@@ -35,12 +35,12 @@
 .moon-mode {
   position: absolute;
   z-index: 1;
-  top: 7px;
+  top: 5px;
   right: 7px;
   width: 18px;
   height: 18px;
   border-radius: 18px;
-  box-shadow: inset -5px -1px 0 0.5px #333;
+  box-shadow: inset -5px -1px 0 0.5px #ffffff;
 }
 
 .darkmode .moon-mode {
@@ -54,14 +54,16 @@
   display: block;
   width: 27px;
   height: 27px;
-  left: 2px;
+  left: -2px;
   border-radius: 27px;
-  background-color: #1f1f1f;
+  background-color: #636161;
   transition: transform 0.5s, background-color 0.5s;
 }
 
 .darkmode .thumb-switch {
-  transform: translateX(37.5px);
+  transform: translateX(29.5px);
+  background-color: rgb(53, 50, 50);
+
 }
 
 @media (max-width: 992px) {
