--- a/src/components/Carrossel/style.css
+++ b/src/components/Carrossel/style.css
@@ -1,5 +1,26 @@
-.slide-item {
+#app {
+  height: 100%;
+}
+
+.swiper {
   width: 100%;
-  height: 400px;
+  height: 50vh;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
