--- a/src/components/SearchBar/style.css
+++ b/src/components/SearchBar/style.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   background-color: var(--primaty-white);
-  border: 1px solid #ccc;
+  border: 1px solid var;
   border-radius: 5px;
   padding: 8px;
   transition: width 0.3s;
