--- a/src/components/ProductCard/style.css
+++ b/src/components/ProductCard/style.css
@@ -1,15 +1,43 @@
 @import "../../styles/global.css";
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+
+.produto-card {
+  margin: 12px;
+  transition: 0.3s;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  background-color: var(--branco-fundo);
+  padding: 15px;
+}
+
+.produto-card:hover {
+  box-shadow: 0px 0px 24px -1px rgba(0, 0, 0, 0.93);
+  border: 1px solid var(--primary-black);
+}
 
 .produto-imagem {
+  display: flex;
   text-align: center;
   width: 262px;
-  height: 349px;
+  height: 315px;
   overflow: hidden;
 }
 
 .produto-imagem img {
   width: 100%;
   object-fit: contain;
+}
+
+.produto-preco,
+.stars {
+  transition: 0.2s;
+  color: var(--primary-black);
+}
+
+.stars {
+  display: flex;
+  letter-spacing: 2px;
+  font-size: 12px;
 }
 
 .produto-preco h3 {
@@ -28,19 +56,35 @@
   line-height: 22px;
 }
 
-.produto-card {
-  margin: 12px;
+/* BOTAO */
+
+.botoes {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-/* BOTAO */
-.lgn-ctn .botao {
+.botoes .botao {
+  color: var(--primary-white);
+  transition: 0.2s;
+  font-weight: 500;
+  letter-spacing: 1px;
   display: flex;
-  width: 311px;
+  width: 100%;
   height: 48px;
   padding: 10px 40px;
+  margin-top: 5px;
   justify-content: center;
   align-items: center;
-  gap: 8px;
-  border-radius: 8px;
-  background: var(--neutral-4);
+  border-radius: 4px;
+  border: 1px solid transparent;
+  background-color: var(--neutral-4);
+}
+
+.botoes .botao:hover {
+  border: 1px solid var(--color-red);
+}
+
+.botoes .red {
+  background-color: var(--color-red);
 }
