--- a/src/components/Carrossel/style.css
+++ b/src/components/Carrossel/style.css
@@ -1,13 +1,10 @@
-#app {
-  height: 100%;
-}
-
 .swiper {
   width: 100%;
   height: 110vh;
 }
 
 .swiper-slide {
+  z-index: 1;
   text-align: center;
   font-size: 18px;
   background: #fff;
