--- a/src/components/NavBarBs/style.css
+++ b/src/components/NavBarBs/style.css
@@ -5,6 +5,7 @@
   transition: 0.2s;
   width: 100%;
   height: 70px;
+  z-index: 9999; /* Set a higher z-index value */
 }
 
 .nav-ctn .nav-img-ctn {
@@ -22,7 +23,6 @@
   text-decoration: none;
   display: flex;
   color: var(--primary-black) !important;
-  border-radius: 5px;
   border: 1px solid transparent;
   transition: 0.2s;
   margin: 0 10px;
