--- a/src/components/ProductCard/style.css
+++ b/src/components/ProductCard/style.css
@@ -5,14 +5,13 @@
   margin: 12px;
   transition: 0.3s;
   border: 1px solid transparent;
-  border-radius: 4px;
+  border-radius: 7px;
   background-color: var(--branco-fundo);
   padding: 15px;
 }
 
 .produto-card:hover {
   box-shadow: 0px 0px 24px -1px rgba(0, 0, 0, 0.93);
-  border: 1px solid var(--primary-black);
 }
 
 .produto-imagem {
@@ -60,7 +59,7 @@
 
 .botoes {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
 }
 
@@ -70,7 +69,7 @@
   font-weight: 500;
   letter-spacing: 1px;
   display: flex;
-  width: 100%;
+  width: 30%%;
   height: 48px;
   padding: 10px 40px;
   margin-top: 5px;
@@ -87,4 +86,11 @@
 
 .botoes .red {
   background-color: var(--color-red);
+}
+
+@media (max-width: 991px) {
+  .produto-imagem {
+    width: 230px;
+    height: 230px;
+  }
 }
