--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,13 +1,35 @@
-.prod-list {
-  display: flex;
-  width: 100%;
-  max-width: 1250px;
-  flex-wrap: wrap;
-  list-style: none;
-}
-
 .home-pg {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.home-pg h2 {
+  margin: 25px;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Poppins;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 44px; /* 110% */
+  letter-spacing: -0.4px;
+}
+
+.prod-list {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  max-width: 1250px;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+}
+
+.pagination button {
+  border: none;
+  margin: 35px 0;
+}
+
+.pagination button i:hover {
+  color: var(--color-red);
 }
